tests/paczka1/fuzzy1/54520197.err
Error in line 4: 94hVCe S169 97,2
Error in line 15: rg4JQDDoVr S605 29,6
Error in line 17: rg4JQDDoVr S324 3,5
Error in line 26: hSggiI S169 94,5
Error in line 18: rg4JQDDoVr S605 70,2
Error in line 35: hSggiI S169 19,9
